# types-and-programming-languages

./: .gitignore  shell.nix
isorec/: Cargo.toml
isorec/src/: builtins.rs  error.rs  lib.rs  main.rs  parser.rs  scanner.rs  term.rs  types.rs
isorec/tests/: builtins.rs  extensions.rs  typecheck.rs
simply-typed/: Cargo.toml
simply-typed/src/: builtins.rs  error.rs  lib.rs  main.rs  parser.rs  scanner.rs  term.rs  types.rs
simply-typed/tests/: builtins.rs  extensions.rs  typecheck.rs
untyped/: Cargo.toml
untyped/src/: church.rs  lib.rs  main.rs  parser.rs  scanner.rs  term.rs
untyped/tests/: builtins.rs  church_booleans.rs
